--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -1,13 +1,25 @@
-﻿@{
+﻿@model LinkShortener.Models.Links
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>Link Shortener</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+    <h1>Link Shortener @ViewBag.blah</h1>
+    <p>Welcome to the ++ link shortner @ViewBag.id</p>
 
+    @using (Html.BeginForm("StoreLongUrl", "Home", FormMethod.Post))
+    {
+        @Html.TextBoxFor(model => model.LongUrl)
+        <p style="color:red">@Html.ValidationMessageFor(model => model.LongUrl)</p>
+        <button type="submit">Get Short Url!!</button>
+        <p>@ViewBag.resultLine @ViewBag.result</p>
+    }
+    <p style="color:darkred">@ViewBag.errorLongUrl</p>
+@*    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    *@
+</div>
+@*
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
@@ -29,3 +41,4 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+*@
