--- a/LinkShortener/Views/Home/Index.cshtml
+++ b/LinkShortener/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div class="jumbotron">
-    <h1>Link Shortener @ViewBag.blah</h1>
-    <p>Welcome to the ++ link shortner @ViewBag.id</p>
+    <h1>Link Shortener</h1>
+    <p>Welcome to the ++ link shortner</p>
 
     @using (Html.BeginForm("StoreLongUrl", "Home", FormMethod.Post))
     {
